# Bot

./: .discloudignore  .gitignore  Cargo.toml  Dockerfile  README.md  deno.json  discloud.config  package.json
src/discord/base/: app.ts  base.env.ts  base.error.ts  base.version.ts  bootstrap.ts  constants.ts  creators.ts  index.ts
src/discord/base/commands/: handlers.ts  manager.ts
src/discord/base/events/: handlers.ts  manager.ts
src/discord/base/responders/: handlers.ts  manager.ts
src/discord/events/: message-create.ts
src/functions/: index.ts
src/functions/utils/: global.ts
src/menus/: index.ts
src/tools/: automod.ts  index.ts
