[package]
name = "bangboo"
version = "0.0.1"
edition = "2024"

[profile.release]
opt-level = 0
debug = false
split-debuginfo = "packed"
strip = "none"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[[bin]]
name = "Bangboo"
path = "src/main.rs"

[workspace]
members = ["packages/bot"]


